# eve-ice-monitor

./: .dockerignore  .env.example  .env.oracle.example  .gitignore  Dockerfile  README.md  ice-monitor-bot.service  ice-monitor.service  pyproject.toml
.github/workflows/: ci.yml
scripts/: deploy.sh
src/ice_monitor/: __init__.py  auth.py  bot.py  cli.py  config.py  discord.py  esi_mcp_server.py  monitor.py  prices.py  state.py
tests/: conftest.py  test_auth.py  test_bot_tools.py  test_claude_assess.py  test_discord.py  test_monitor_fetches.py  test_monitor_scoring.py  test_monitor_state_machine.py  test_prices.py  test_state.py
